Bug 32684 - Ruler view displays in "char" measurement and always reverts back to this upon restart
Summary: Ruler view displays in "char" measurement and always reverts back to this upo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 RC1
Hardware: x86 (IA32) All
: medium normal
Assignee: Cédric Bosdonnat
URL:
Whiteboard:
Keywords:
: 33608 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-27 09:29 UTC by Jeremy M
Modified: 2011-06-08 00:38 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of ruler view on and char selection (21.58 KB, image/jpeg)
2010-12-27 09:29 UTC, Jeremy M
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy M 2010-12-27 09:29:40 UTC
Created attachment 41475 [details]
Screenshot of ruler view on and char selection

Every time I start Libreoffice Writer the "char" measurement for ruler is used. Even if I change it to inches it will always revert back to "char" upon restarting Writer. 

This is not the case in Linux (works fine); problem for me is reproducible operating in Windows XP 32bit and Windows 7 64 bit. This has also been around since RC1- haven't tested before that time.
Comment 1 Jan Holesovsky 2010-12-28 06:18:51 UTC
Cedric: Any idea, please?
Comment 2 bkirkp 2010-12-28 12:05:37 UTC
This also happens to me in Slackware64-current, using the most recent KDE release candidate, except the vertical ruler shows "lines", as well. Changing the options in Writer -> View does not stick for the next document. Either opening a new document or closing the application then opening it again brings the units back to "char" & "lines".
Comment 3 Jeremy M 2011-01-05 05:09:48 UTC
I've noticed that doing a couple more installs it goes away if I do custom install with default options (with exception of choosing the English US language pack only). Custom install with "everything" installed causes the problem.

So, perhaps this is a bug from either an extension, language pack, or extra feature of Libreoffice? I am not sure what is causing the problem specifically.
Comment 4 Scott 2011-01-27 16:03:21 UTC
This is occuring for me in Windows XP SP3 but both Horiz and Vert are set to inches and if I change it it only stays for that session.  Next Session reversts to prior settings.
Comment 5 Cédric Bosdonnat 2011-02-01 07:28:25 UTC
Fixed in master branch by commit:
http://cgit.freedesktop.org/libreoffice/writer/commit/?id=552cdb5b8b406238486b9415262a551cb29ca817
Comment 6 Olivia 2011-02-03 05:02:34 UTC
any chance this has anything to do with this: https://bugs.freedesktop.org/show_bug.cgi?id=33733 ??
Comment 7 Cédric Bosdonnat 2011-02-03 05:10:34 UTC
(In reply to comment #6)
> any chance this has anything to do with this:
> https://bugs.freedesktop.org/show_bug.cgi?id=33733 ??

No, no chance at all.
Comment 8 Scott 2011-02-11 07:34:43 UTC
Wooo Hooo Another great fix!  RC1 fixed this!
Comment 9 Cédric Bosdonnat 2011-02-15 03:32:11 UTC
*** Bug 33608 has been marked as a duplicate of this bug. ***
Comment 10 cwchia 2011-02-24 19:10:13 UTC
Request to reopen this bug. The same problem persists in my Linux x86 installation (PCLinuxOS 2011 with latest KDE4) running LibO 3.3.1 Final/RC2.

As indicated in Bug 33608 (which is marked as duplicate of this bug), the problem is caused by enabling CJK language.

Whenever CJK is disabled, the ruler setting will stick, otherwise it always revert back to Char & Line.
Comment 11 cwchia 2011-02-24 20:38:38 UTC
Just realized that this bug is for Windows (ALL) whilst my findings in about Linux x86 as per my original bug report Bug 33608. Shall I reopen Bug 33608 instead?
Comment 12 Rainer Bielefeld Retired 2011-02-25 04:18:08 UTC
Due to  Comment 2
Comment 13 Cédric Bosdonnat 2011-02-25 05:38:20 UTC
(In reply to comment #10)
> Request to reopen this bug. The same problem persists in my Linux x86
> installation (PCLinuxOS 2011 with latest KDE4) running LibO 3.3.1 Final/RC2.
> 
> As indicated in Bug 33608 (which is marked as duplicate of this bug), the
> problem is caused by enabling CJK language.
> 
> Whenever CJK is disabled, the ruler setting will stick, otherwise it always
> revert back to Char & Line.

I'm closing this bug again, as 3.3.1 isn't fixing this. I wrote in comment 5 that this is fixed in master branch: the fix will be included in 3.4. I can try to have a review for inclusion in future 3.3.x versions, but it's too late for 3.3.1.
Comment 14 Cédric Bosdonnat 2011-05-23 04:23:58 UTC
Fix not correct. not working in 3.4.0 RC1
Comment 15 Jeremy M 2011-06-06 08:42:24 UTC
(In reply to comment #14)
> Fix not correct. not working in 3.4.0 RC1

Also still seeing this problem in 3.4 release for Windows.
Comment 16 Cédric Bosdonnat 2011-06-08 00:38:49 UTC
Actually fixed in the libreoffice-3-4 branch (thanks David for the review).

http://cgit.freedesktop.org/libreoffice/writer/commit/?h=libreoffice-3-4&id=f1575d39d539f261d40d81aca48820f8fb495ff8

Will be available in 3.4.1