fdo#32684: Don't force Char / Lines units on rulers